<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_consultation_summary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/thickBlue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_diagnosis"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000"/>
        <EditText
            android:id="@+id/diagnosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_diagnosis"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:maxLines="2"
            android:background="@drawable/border_grey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_medical_advice"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000"/>
        <EditText
            android:id="@+id/advice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_medical_advice"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:maxLines="2"
            android:background="@drawable/border_grey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_medical_required"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="#000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_can_select_multiple_tests"/>
        <com.modastadoc.doctors.view.ContactsCompletionView
            android:id="@+id/autocomplete_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:inputType="text|textNoSuggestions|textMultiLine"
            android:nextFocusDown="@+id/editText"
            android:background="@drawable/border_grey"
            android:padding="10dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/otehr_tset_add_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="some test added to other test field"
            android:textColor="@color/red"
            android:textSize="15dp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_other_tests"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:visibility="gone"
            android:textColor="#000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_test_name"
            android:visibility="gone"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000"/>
        <EditText
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_test_name"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:maxLines="2"
            android:visibility="gone"
            android:background="@drawable/border_grey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_upload_file"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:background="@drawable/border_grey">
            <Button
                android:id="@+id/upload"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/text_upload"/>
            <TextView
                android:id="@+id/file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:maxLines="1"/>
        </LinearLayout>
        <!--<EditText
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_test_name"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:background="@drawable/border_grey"/>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center">
            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/red"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border_red"
                android:textStyle="bold"
                android:text="@string/text_save"/>
            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/red"
                android:background="@drawable/border_red"
                android:textStyle="bold"
                android:text="@string/text_show_to_patient"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
