<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border_grey">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/text_name"/>
                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textColor="@color/lightBlack"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mediumGrey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/text_age"/>
                <TextView
                    android:id="@+id/age"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/lightBlack"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/text_gender"/>
                <TextView
                    android:id="@+id/gender"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/lightBlack"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mediumGrey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/text_height"/>
                <TextView
                    android:id="@+id/height"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/lightBlack"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/text_weight"/>
                <TextView
                    android:id="@+id/weight"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/lightBlack"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:background="@drawable/border_light_blue">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_diagnosed_condition"/>
            <TextView
                android:id="@+id/diagnosis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/thickGreen"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_medication"/>
            <TextView
                android:id="@+id/medication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/thickGreen"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_allergy"/>
            <TextView
                android:id="@+id/allergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/thickGreen"/>
        </LinearLayout>
        <!--<LinearLayout
            android:id="@+id/summary_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_light_blue"
            android:visibility="gone">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Other Test:"/>
            <TextView
                android:id="@+id/other_test"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:textColor="@color/lightBlack"
                android:layout_height="wrap_content" />
        </LinearLayout>-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Previous Consultations"
            android:textColor="@color/thickBlue"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/pre_cons_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</merge>