<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/pic_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
            <com.modastadoc.doctors.widget.CircularImageView
                android:id="@+id/pic"
                android:layout_width="70dp"
                android:layout_height="70dp"/>
            <ImageView
                android:id="@+id/status"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="8dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/pic_layout"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp">
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/details"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/lightBlack"/>
            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/border_thick_blue"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/thickBlue"
                android:text="@string/appointment_view_detail_title"/>

            <TextView
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:textColor="@color/lightBlack"
                android:text="Order ID : "/>
            <TextView
                android:id="@+id/order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/order"
                android:layout_below="@+id/name"
                android:textColor="@color/lightBlack"/>
            <TextView
                android:id="@+id/delayed_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/order"
                android:textColor="@color/orange"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delayed_by"
                android:textColor="@color/thickGrey"
                android:text="@string/appointment_datetime_title"/>
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/datetime"
                android:textColor="@color/thickBlue"
                android:drawableStart="@drawable/date_icon_small"
                android:drawablePadding="3dp"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/datetime"
                android:layout_toEndOf="@+id/date"
                android:textColor="@color/thickBlue"
                android:gravity="center"
                android:drawableStart="@drawable/time_icon_small"
                android:drawablePadding="3dp"
                android:layout_marginStart="15dp"/>
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:id="@+id/call"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/thickGreen"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/appointment_call_title"/>
        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/red"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:text="@string/appointment_cancel_title"/>
        <TextView
            android:id="@+id/delay"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/appointment_delay_title"/>
        <TextView
            android:id="@+id/view_summary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/thickGrey"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/appointment_view_summary_title"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/thickGrey"/>
</LinearLayout>