<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/login_background">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo"
        android:layout_marginTop="30dp"
        android:orientation="vertical" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/login_username"
        android:layout_marginTop="40dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:alpha="0.7"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="5dp"
        android:maxLines="1"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/border_input_login"
        android:textColor="@color/lightBlack"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:alpha="0.7"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:maxLines="1"
        android:textSize="16sp"
        android:hint="@string/login_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:background="@drawable/border_input_login"
        android:textColor="@color/lightBlack"/>
    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login_signin"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@drawable/border_login_blue"
        android:layout_marginTop="40dp"
        android:padding="15dp"
        android:alpha="0.7"/>
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:gravity="end"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="Forgot Password?"
        android:textSize="12sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/terms_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>
</LinearLayout>